--- a/explorer.html
+++ b/explorer.html
@@ -308,6 +308,17 @@
     { url: 'kapasitor ether.html', label: 'Kapasitor Ether', icon: '📝', cat: 'cat-blue' },
     { url: 'tanah jarang lanjutan.html', label: 'Tanah Jarang Lanjutan', icon: '📝', cat: 'cat-blue' },
     { url: 'jenis tanah jarang.html', label: 'Jenis Tanah Jarang', icon: '📝', cat: 'cat-blue' },
+    { url: 'font restore sundaland.html', label: 'Font Restore Sundaland', icon: '📝', cat: 'cat-blue' },
+    { url: 'sop nyeuseuh batik pusaka.html', label: 'Sop Nyeuseuh Batik Pusaka', icon: '📝', cat: 'cat-blue' },
+    { url: 'resonator manna .html', label: 'Resonator Manna', icon: '📝', cat: 'cat-blue' },
+    { url: 'infromasi karuhun.html', label: 'Infromasi Karuhun', icon: '📝', cat: 'cat-blue' },
+    { url: 'protokol survival radiasi nuklir.html', label: 'Protokol Survival Radiasi Nuklir', icon: '📝', cat: 'cat-blue' },
+    { url: 'radio butuh jadi alarem.html', label: 'Radio Butuh Jadi Alarem', icon: '📝', cat: 'cat-blue' },
+    { url: 'Kalkulator bahan antena EMP.html', label: 'Kalkulator Bahan Antena EMP', icon: '📝', cat: 'cat-blue' },
+    { url: 'prosedur pelindung data digital.html', label: 'Prosedur Pelindung Data Digital', icon: '📝', cat: 'cat-blue' },
+    { url: 'bahan bangun leuit piramida.html', label: 'Bahan Bangun Leuit Piramida', icon: '📝', cat: 'cat-blue' },
+    { url: 'leuit piramida.html', label: 'Leuit Piramida', icon: '📝', cat: 'cat-blue' },
+    { url: 'kebutuhan ektraksi mineral tanah jarang.html', label: 'Kebutuhan Ektraksi Mineral Tanah Jarang', icon: '📝', cat: 'cat-blue' },
     { url: '01 Jam Sunda Nuswantara.html', label: 'Jam Utama', icon: '🕐', cat: 'cat-time' },
     { url: '02. Kalender Sunda Nuswantara.html', label: 'Kalender', icon: '📅', cat: 'cat-time' },
     { url: '03. Jadwal Shalat Sunda Nuswantara.html', label: 'Shalat', icon: '🕌', cat: 'cat-culture' },
@@ -506,5 +517,6 @@
     </script>
 </body>
 </html>
+
 
 
