--- a/index.html
+++ b/index.html
@@ -669,6 +669,9 @@
                     <a href="#" onclick="launchApp('audit finansial.html', 'Audit Finansial', '⚖️')" class="app-card cat-edu">
                     <div class="app-icon">⚖️</div><div class="app-label">Audit Finansial</div>
                 </a>
+                    <a href="#" onclick="launchApp('panduan semesta sunda nuswantara.html', 'Panduan Semesta Sunda Nuswantara', '⚛️')" class="app-card cat-future">
+                    <div class="app-icon">⚛️</div><div class="app-label">Panduan Semesta Sunda Nuswantara</div>
+                </a>
                     
             </div>
 
@@ -1051,6 +1054,7 @@
     </script>
 </body>
 </html>
+
 
 
 
