--- a/panduan semesta sunda nuswantara.html
+++ b/panduan semesta sunda nuswantara.html
@@ -195,7 +195,7 @@
 
 <div class="dashboard-grid">
 
-    <div class="menu-card" onclick="alert('Membuka File: 50 Bongkaran Fitnah Dajjal...')">
+    <div class="menu-card" onclick="alert('50 bongkaran fitnah dajjal dalam narasi besar.html')">
         <span class="card-icon" style="color: #00f0ff;">👁️</span>
         <div class="card-title">GRAND NARRATIVE</div>
         <div class="card-desc">
@@ -204,7 +204,7 @@
         <a href="#" class="access-btn">BUKA DATA</a>
     </div>
 
-    <div class="menu-card" onclick="alert('Membuka File: Geologi & Nafas Bumi...')">
+    <div class="menu-card" onclick="alert('50 bongkaran narasi sesat dajjal tentang bumi.html')">
         <span class="card-icon" style="color: #ffaa00;">🌋</span>
         <div class="card-title">EARTH BREATH</div>
         <div class="card-desc">
@@ -213,7 +213,7 @@
         <a href="#" class="access-btn">BUKA DATA</a>
     </div>
 
-    <div class="menu-card card-green" onclick="alert('Membuka File: Energi Bebas & Ether...')">
+    <div class="menu-card card-green" onclick="alert('50 Narasi Sesat untuk menghapus Free Energy.html')">
         <span class="card-icon">⚡</span>
         <div class="card-title">FORBIDDEN ENERGY</div>
         <div class="card-desc">
@@ -222,7 +222,7 @@
         <a href="#" class="access-btn">BUKA DATA</a>
     </div>
 
-    <div class="menu-card card-red" onclick="alert('Membuka File: Fear Matrix Declassified...')">
+    <div class="menu-card card-red" onclick="alert('50 fakta bagaimana alam dunia ini bekerja.html')">
         <span class="card-icon">🚫</span>
         <div class="card-title">FEAR MATRIX</div>
         <div class="card-desc">
@@ -231,7 +231,7 @@
         <a href="#" class="access-btn">BUKA DATA</a>
     </div>
 
-    <div class="menu-card" onclick="alert('Membuka File: Cosmic Overclocking...')">
+    <div class="menu-card" onclick="alert('50 Protokol pembalik Fitnah Dajjal tentang Akhir Zaman.html')">
         <span class="card-icon" style="color: #d400ff;">⏳</span>
         <div class="card-title">TIME OVERCLOCK</div>
         <div class="card-desc">
@@ -240,7 +240,7 @@
         <a href="#" class="access-btn">BUKA DATA</a>
     </div>
 
-    <div class="menu-card card-green" onclick="alert('Membuka File: Ice Age & Sync Protocol...')">
+    <div class="menu-card card-green" onclick="alert('50 protokol pelawan ketakutan dan kebisingan akhir jaman.html')">
         <span class="card-icon">🛡️</span>
         <div class="card-title">SURVIVAL PROTOCOL</div>
         <div class="card-desc">
@@ -257,4 +257,5 @@
 </div>
 
 </body>
+
 </html>
