Update panduan semesta sunda nuswantara.html

--- a/panduan semesta sunda nuswantara.html
+++ b/panduan semesta sunda nuswantara.html
@@ -265,6 +265,50 @@
         <a href="50 protokol pelawan ketakutan dan kebisingan akhir jaman.html" class="access-btn">BUKA DATA</a>
     </div>
 
+    <div class="menu-card card-green" onclick="window.location.href='50 Tips Lawan Agenda Kekeringan Global ala Dajjal.html'">
+        <div>
+            <span class="card-icon">🛡️</span>
+            <div class="card-title">AGENDA KEKERINGAN GLOBAL</div>
+            <div class="card-desc">
+                Membongkar skenario kekeringan buatan, pencurian air bawah tanah (DUMBs), dan teknologi pemanen air (Air Well) leluhur.
+            </div>
+        </div>
+        <a href="50 protokol pelawan ketakutan dan kebisingan akhir jaman.html" class="access-btn">BUKA DATA</a>
+    </div>
+
+    <div class="menu-card card-green" onclick="window.location.href='50 Tips perlawanan Agenda Kelaparan Global.html'">
+        <div>
+            <span class="card-icon">🛡️</span>
+            <div class="card-title">HYDRO WARFARE</div>
+            <div class="card-desc">
+                Melawan Chemtrails, Benih Terminator (GMO), dan Monopoli Pangan. Protokol pemulihan tanah mati akibat racun kimia.
+            </div>
+        </div>
+        <a href="50 protokol pelawan ketakutan dan kebisingan akhir jaman.html" class="access-btn">BUKA DATA</a>
+    </div>
+
+    <div class="menu-card card-green" onclick="window.location.href='50 Tips Sehat Sunda Nuswantara Part1.html'">
+        <div>
+            <span class="card-icon">🛡️</span>
+            <div class="card-title">AGRO TERRORISM</div>
+            <div class="card-desc">
+                Bongkaran definisi penyakit (Virus/Kanker), Detoksifikasi Alami, dan Bahaya Makanan Palsu (Ultra-Processed Food).
+            </div>
+        </div>
+        <a href="50 protokol pelawan ketakutan dan kebisingan akhir jaman.html" class="access-btn">BUKA DATA</a>
+    </div>
+
+    <div class="menu-card card-green" onclick="window.location.href='50 Tips Sehat Sunda Nuswantara Part2.html'">
+        <div>
+            <span class="card-icon">🛡️</span>
+            <div class="card-title">MEDICAL HAZARD II</div>
+            <div class="card-desc">
+                Solusi Alami Penyakit Mahal (Stroke, Syaraf, Autoimun), Kerusakan Hormon, dan Penyakit Gaya Hidup Modern akibat radiasi & gula.
+            </div>
+        </div>
+        <a href="50 protokol pelawan ketakutan dan kebisingan akhir jaman.html" class="access-btn">BUKA DATA</a>
+    </div>
+
 </div>
 
 <div class="footer">
@@ -274,3 +318,4 @@
 
 </body>
 </html>
+
