Update panduan semesta sunda nuswantara.html

--- a/panduan semesta sunda nuswantara.html
+++ b/panduan semesta sunda nuswantara.html
@@ -273,7 +273,7 @@
                 Membongkar skenario kekeringan buatan, pencurian air bawah tanah (DUMBs), dan teknologi pemanen air (Air Well) leluhur.
             </div>
         </div>
-        <a href="50 protokol pelawan ketakutan dan kebisingan akhir jaman.html" class="access-btn">BUKA DATA</a>
+        <a href="50 Tips Lawan Agenda Kekeringan Global ala Dajjal.html" class="access-btn">BUKA DATA</a>
     </div>
 
     <div class="menu-card card-green" onclick="window.location.href='50 Tips perlawanan Agenda Kelaparan Global.html'">
@@ -284,7 +284,7 @@
                 Melawan Chemtrails, Benih Terminator (GMO), dan Monopoli Pangan. Protokol pemulihan tanah mati akibat racun kimia.
             </div>
         </div>
-        <a href="50 protokol pelawan ketakutan dan kebisingan akhir jaman.html" class="access-btn">BUKA DATA</a>
+        <a href="50 Tips perlawanan Agenda Kelaparan Global.html" class="access-btn">BUKA DATA</a>
     </div>
 
     <div class="menu-card card-green" onclick="window.location.href='50 Tips Sehat Sunda Nuswantara Part1.html'">
@@ -295,7 +295,7 @@
                 Bongkaran definisi penyakit (Virus/Kanker), Detoksifikasi Alami, dan Bahaya Makanan Palsu (Ultra-Processed Food).
             </div>
         </div>
-        <a href="50 protokol pelawan ketakutan dan kebisingan akhir jaman.html" class="access-btn">BUKA DATA</a>
+        <a href="50 Tips Sehat Sunda Nuswantara Part1.html" class="access-btn">BUKA DATA</a>
     </div>
 
     <div class="menu-card card-green" onclick="window.location.href='50 Tips Sehat Sunda Nuswantara Part2.html'">
@@ -306,7 +306,7 @@
                 Solusi Alami Penyakit Mahal (Stroke, Syaraf, Autoimun), Kerusakan Hormon, dan Penyakit Gaya Hidup Modern akibat radiasi & gula.
             </div>
         </div>
-        <a href="50 protokol pelawan ketakutan dan kebisingan akhir jaman.html" class="access-btn">BUKA DATA</a>
+        <a href="50 Tips Sehat Sunda Nuswantara Part2.html" class="access-btn">BUKA DATA</a>
     </div>
 
 </div>
@@ -318,4 +318,5 @@
 
 </body>
 </html>
+
 
