Update panduan semesta sunda nuswantara.html

--- a/panduan semesta sunda nuswantara.html
+++ b/panduan semesta sunda nuswantara.html
@@ -309,6 +309,50 @@
         <a href="50 Tips Sehat Sunda Nuswantara Part2.html" class="access-btn">BUKA DATA</a>
     </div>
 
+        <div class="menu-card card-green" onclick="window.location.href='50 Tips Sehat Sunda Nuswantara Part3.html'">
+        <div>
+            <span class="card-icon">🛡️</span>
+            <div class="card-title">MEDICAL HAZARD III</div>
+            <div class="card-desc">
+                Solusi Alami Penyakit Mahal (Stroke, Syaraf, Autoimun), Kerusakan Hormon, dan Penyakit Gaya Hidup Modern akibat radiasi & gula.
+            </div>
+        </div>
+        <a href="50 Tips Sehat Sunda Nuswantara Part3.html" class="access-btn">BUKA DATA</a>
+    </div>
+
+    <div class="menu-card" style="border-color: #ff9900;" onclick="window.location.href='50 Tips Membangun Tatanan Sosial dan Interaksi Sosial Kembali.html'">
+        <div>
+            <span class="card-icon" style="color: #ff9900;">🤝</span>
+            <div class="card-title" style="color: #ff9900;">SOCIAL ORDER</div>
+            <div class="card-desc">
+                Hancurkan Individualisme & Algoritma. Bangun Tatanan Alami, Gotong Royong, & Hierarki Fungsi.
+            </div>
+        </div>
+        <a href="50 Tips Membangun Tatanan Sosial dan Interaksi Sosial Kembali.html" class="access-btn" style="border-color: #ff9900; color: #ff9900;">BUKA DATA</a>
+    </div>
+
+    <div class="menu-card card-red" onclick="window.location.href='50 Tips Lawan Agenda Perang dan Kerusuhan.html'">
+        <div>
+            <span class="card-icon" style="color: #ff3333;">⚔️</span>
+            <div class="card-title" style="color: #ff3333;">WAR & CHAOS</div>
+            <div class="card-desc">
+                Bongkaran taktik Adu Domba, Krisis Buatan, & Ritual Panen Energi (Warfare). Solusi Damai Nuswantara.
+            </div>
+        </div>
+        <a href="50 Tips Lawan Agenda Perang dan Kerusuhan.html" class="access-btn" style="border-color: #ff3333; color: #ff3333;">BUKA DATA</a>
+    </div>
+
+    <div class="menu-card" style="border-color: #ffd700;" onclick="window.location.href='50 Tips Protokol Sosial dan Ekonomi.html'">
+        <div>
+            <span class="card-icon">💰</span>
+            <div class="card-title" style="color: #ffd700;">ECONOMIC RESISTANCE</div>
+            <div class="card-desc">
+                Lawan sistem 666 (Digital ID/CBDC) dengan De-Urbanisasi, Emas, dan Ekonomi Desa Mandiri.
+            </div>
+        </div>
+        <a href="50 Tips Protokol Sosial dan Ekonomi.html" class="access-btn" style="border-color: #ffd700; color: #ffd700;">BUKA DATA</a>
+    </div>
+
 </div>
 
 <div class="footer">
@@ -318,5 +362,6 @@
 
 </body>
 </html>
+
 
 
