Update panduan semesta sunda nuswantara.html

--- a/panduan semesta sunda nuswantara.html
+++ b/panduan semesta sunda nuswantara.html
@@ -320,7 +320,7 @@
         <a href="50 Tips Sehat Sunda Nuswantara Part3.html" class="access-btn">BUKA DATA</a>
     </div>
 
-    <div class="menu-card" style="border-color: #ff9900;" onclick="window.location.href='50 Tips Membangun Tatanan Sosial dan Interaksi Sosial Kembali.html'">
+    <div class="menu-card" style="border-color: #ff9900;" onclick="window.location.href='50-Tips-Membangun-Tatanan-Sosial-dan-Interaksi-Sosial-Kembali.html'">
         <div>
             <span class="card-icon" style="color: #ff9900;">🤝</span>
             <div class="card-title" style="color: #ff9900;">SOCIAL ORDER</div>
@@ -328,7 +328,7 @@
                 Hancurkan Individualisme & Algoritma. Bangun Tatanan Alami, Gotong Royong, & Hierarki Fungsi.
             </div>
         </div>
-        <a href="50 Tips Membangun Tatanan Sosial dan Interaksi Sosial Kembali.html" class="access-btn" style="border-color: #ff9900; color: #ff9900;">BUKA DATA</a>
+        <a href="50-Tips-Membangun-Tatanan-Sosial-dan-Interaksi-Sosial-Kembali.html" class="access-btn" style="border-color: #ff9900; color: #ff9900;">BUKA DATA</a>
     </div>
 
     <div class="menu-card card-red" onclick="window.location.href='50 Tips Lawan Agenda Perang dan Kerusuhan.html'">
@@ -362,6 +362,7 @@
 
 </body>
 </html>
+
 
 
 
