Update panduan semesta sunda nuswantara.html

--- a/panduan semesta sunda nuswantara.html
+++ b/panduan semesta sunda nuswantara.html
@@ -353,6 +353,83 @@
         <a href="50 Tips Protokol Sosial dan Ekonomi.html" class="access-btn" style="border-color: #ffd700; color: #ffd700;">BUKA DATA</a>
     </div>
 
+    <div class="menu-card" style="border-color: #50c878;" onclick="window.location.href='50 Mata Uang dalam Kondisi Darurat.html'">
+        <div>
+            <span class="card-icon" style="color: #50c878;">⚖️</span>
+            <div class="card-title" style="color: #50c878;">CRISIS EXCHANGE</div>
+            <div class="card-desc">
+                Protokol alat tukar darurat: Dinar, Dirham, Barter Pangan, & Jasa. Solusi saat uang kertas mati.
+            </div>
+        </div>
+        <a href="50 Mata Uang dalam Kondisi Darurat.html" class="access-btn" style="border-color: #50c878; color: #50c878;">BUKA DATA</a>
+    </div>
+
+    <div class="menu-card" style="border-color: #ffffff;" onclick="window.location.href='50 Hack Ekonomi Nilai.html'">
+        <div>
+            <span class="card-icon" style="color: #ffffff;">💎</span>
+            <div class="card-title" style="color: #ffffff;">VALUE ECONOMY</div>
+            <div class="card-desc">
+                Panduan Gen Z/Alpha: Bypass sistem uang, fokus akuisisi nilai riil (rumah, pangan, skill) tanpa hutang.
+            </div>
+        </div>
+        <a href="50 Hack Ekonomi Nilai.html" class="access-btn" style="border-color: #ffffff; color: #ffffff;">BUKA DATA</a>
+    </div>
+
+    <div class="menu-card" style="border-color: #d4af37;" onclick="window.location.href='50 Hack Kekayaan Nilai bukan Kekayaan Angka.html'">
+        <div>
+            <span class="card-icon" style="color: #d4af37;">🏆</span>
+            <div class="card-title" style="color: #d4af37;">TRUE WEALTH</div>
+            <div class="card-desc">
+                Bongkar ilusi kekayaan modern. Sawah vs Duit, Emas vs Gadget. Hidup merdeka tanpa hutang.
+            </div>
+        </div>
+        <a href="50 Hack Kekayaan Nilai bukan Kekayaan Angka.html" class="access-btn" style="border-color: #d4af37; color: #d4af37;">BUKA DATA</a>
+    </div>
+
+    <div class="menu-card" style="border-color: #00ff41;" onclick="window.location.href='50 Protokol Economic War.html'">
+        <div>
+            <span class="card-icon" style="color: #00ff41;">📉</span>
+            <div class="card-title" style="color: #00ff41;">ECONOMIC WARFARE</div>
+            <div class="card-desc">
+                Taktik Gerilya melawan Inflasi, Resesi & Deflasi. Bongkar strategi licik Shrinkflation & Predatory Pricing.
+            </div>
+        </div>
+        <a href="50 Protokol Economic War.html" class="access-btn" style="border-color: #00ff41; color: #00ff41;">BUKA DATA</a>
+    </div>
+
+    <div class="menu-card" style="border-color: #00e5ff;" onclick="window.location.href='50 Tips De Industrialisasi di era otomatisasi.html'">
+        <div>
+            <span class="card-icon" style="color: #00e5ff;">🤖</span>
+            <div class="card-title" style="color: #00e5ff;">PERSONAL AUTOMATION</div>
+            <div class="card-desc">
+                Toolkit De-Industrialisasi: 50 Alat Wajib (3D Printer, AI Lokal, Smart Farm) untuk produksi mandiri.
+            </div>
+        </div>
+        <a href="50 Tips De Industrialisasi di era otomatisasi.html" class="access-btn" style="border-color: #00e5ff; color: #00e5ff;">BUKA DATA</a>
+    </div>
+
+    <div class="menu-card" style="border-color: #ff4500;" onclick="window.location.href='50 Aturan Ekonomi Komunitas Desentralisasi.html'">
+        <div>
+            <span class="card-icon" style="color: #ff4500;">🔄</span>
+            <div class="card-title" style="color: #ff4500;">MUTUAL CIRCULATION</div>
+            <div class="card-desc">
+                Protokol Ekonomi Tertutup: Wajib Produksi & Wajib Beli di Tetangga. Anti Penimbunan & Uang Macet.
+            </div>
+        </div>
+        <a href="50 Aturan Ekonomi Komunitas Desentralisasi.html" class="access-btn" style="border-color: #ff4500; color: #ff4500;">BUKA DATA</a>
+    </div>
+
+    <div class="menu-card" style="border-color: #e5c100;" onclick="window.location.href='50 Tips Ekonomi Nilai Tanpa Alat Tukar Pembayaran.html'">
+        <div>
+            <span class="card-icon" style="color: #e5c100;">⚖️</span>
+            <div class="card-title" style="color: #e5c100;">SETTLEMENT PROTOCOL</div>
+            <div class="card-desc">
+                Sistem Transaksi Antar Wilayah Tanpa Uang Penjajah. Investasi Sapi, Barter Komoditas, & Anti-Riba.
+            </div>
+        </div>
+        <a href="50 Tips Ekonomi Nilai Tanpa Alat Tukar Pembayaran.html" class="access-btn" style="border-color: #e5c100; color: #e5c100;">BUKA DATA</a>
+    </div>
+
 </div>
 
 <div class="footer">
@@ -362,6 +439,7 @@
 
 </body>
 </html>
+
 
 
 
