--- a/panduan semesta sunda nuswantara.html
+++ b/panduan semesta sunda nuswantara.html
@@ -430,6 +430,17 @@
         <a href="50 Tips Ekonomi Nilai Tanpa Alat Tukar Pembayaran.html" class="access-btn" style="border-color: #e5c100; color: #e5c100;">BUKA DATA</a>
     </div>
 
+    <div class="menu-card" style="border-color: #ff3333;" onclick="window.location.href='50 Protokol Anti Perang, Tapi Siap Lawan dan Perangi Elit Global.html'">
+        <div>
+            <span class="card-icon" style="color: #ff3333;">🏴‍☠️</span>
+            <div class="card-title" style="color: #ff3333;">NATIONALISM TRAP</div>
+            <div class="card-desc">
+                Bongkar kedok perang elit. Protokol: Tolak Invasi, Mutiny, Adili Provokator, & Gerilya Defensif.
+            </div>
+        </div>
+        <a href="50 Protokol Anti Perang, Tapi Siap Lawan dan Perangi Elit Global.html" class="access-btn" style="border-color: #ff3333; color: #ff3333;">BUKA DATA</a>
+    </div>
+
 </div>
 
 <div class="footer">
@@ -439,6 +450,7 @@
 
 </body>
 </html>
+
 
 
 
