--- a/index.html
+++ b/index.html
@@ -672,6 +672,9 @@
                     <a href="#" onclick="launchApp('panduan semesta sunda nuswantara.html', 'Panduan Semesta Sunda Nuswantara', '⚛️')" class="app-card cat-future">
                     <div class="app-icon">⚛️</div><div class="app-label">Panduan Semesta Sunda Nuswantara</div>
                 </a>
+                    <a href="#" onclick="launchApp('panduan semesta sunda nuswantara.html', 'youtube.html', '📼')" class="app-card cat-future">
+                    <div class="app-icon">📼</div><div class="app-label">PENCARIAN ANTI ALGO YOUTUBE</div>
+                </a>
                     
             </div>
 
@@ -1054,6 +1057,7 @@
     </script>
 </body>
 </html>
+
 
 
 
