--- a/index.html
+++ b/index.html
@@ -672,8 +672,11 @@
                     <a href="#" onclick="launchApp('panduan semesta sunda nuswantara.html', 'Panduan Semesta Sunda Nuswantara', '⚛️')" class="app-card cat-future">
                     <div class="app-icon">⚛️</div><div class="app-label">Panduan Semesta Sunda Nuswantara</div>
                 </a>
-                    <a href="#" onclick="launchApp('panduan semesta sunda nuswantara.html', 'youtube.html', '📼')" class="app-card cat-future">
+                    <a href="#" onclick="launchApp('youtube.html', 'youtube.html', '📼')" class="app-card cat-future">
                     <div class="app-icon">📼</div><div class="app-label">PENCARIAN ANTI ALGO YOUTUBE</div>
+                </a>
+                    <a href="#" onclick="launchApp('browsing.html', 'browsing.html', '🔍')" class="app-card cat-future">
+                    <div class="app-icon">🔍</div><div class="app-label">Browsing Tanpa Algoritma</div>
                 </a>
                     
             </div>
@@ -1057,6 +1060,7 @@
     </script>
 </body>
 </html>
+
 
 
 
