--- a/explorer.html
+++ b/explorer.html
@@ -322,6 +322,7 @@
     { url: '01 Jam Sunda Nuswantara.html', label: 'Jam Utama', icon: '🕐', cat: 'cat-time' },
     { url: '02. Kalender Sunda Nuswantara.html', label: 'Kalender', icon: '📅', cat: 'cat-time' },
     { url: '03. Jadwal Shalat Sunda Nuswantara.html', label: 'Shalat', icon: '🕌', cat: 'cat-culture' },
+    { url: 'alarem imsyak.html', label: 'IMSYAK ALARM', icon: '🕐', cat: 'cat-culture' },
     { url: '04. Converter Waktu & Tanggal Ke Sunda Nuswantara.html', label: 'Konverter', icon: '🔄', cat: 'cat-tools' },
     { url: '05. Satuan Nilai Sunda Nuswantara.html', label: 'Satuan Nilai', icon: '⚖️', cat: 'cat-edu' },
     { url: '06. Contoh Jadwal Kegiatan Sunda Nuswantara.html', label: 'Jadwal', icon: '📝', cat: 'cat-edu' },
@@ -373,6 +374,8 @@
     { url: '55. Nilai Komoditas.html', label: 'Daftar Nilai Komoditas', icon: '📚', cat: 'cat-fin' },
     { url: '56. Sunda Nuswantara Archive.html', label: 'SUNDA NUSWANTARA ARCHIVE', icon: '📖', cat: 'cat-human' },
     { url: '62. Menu Ether Tech.html', label: 'ETHER TECH & BLUEPRINTS', icon: '⚡', cat: 'cat-tech' },
+    { url: 'cermin youtube.html', label: 'YOUTUBE MIRROR', icon: '📺', cat: 'cat-doc' },
+    { url: 'cermin multi platform.html', label: 'RANDOM ALGORITMA MEDIA', icon: '📺', cat: 'cat-doc' },
     { url: 'kompas.html', label: 'NAVIGASI TAKTIS', icon: '🧭', cat: 'cat-tools' },
     { url: 'petajalur.html', label: 'BUAT PETA JALUR', icon: '🌍', cat: 'cat-tools' },
     { url: 'DecentralizedID.html', label: 'Cetak Data Personal', icon: '📄', cat: 'cat-sys' },
@@ -517,6 +520,7 @@
     </script>
 </body>
 </html>
+
 
 
 
