--- a/explorer.html
+++ b/explorer.html
@@ -375,6 +375,7 @@
     { url: '56. Sunda Nuswantara Archive.html', label: 'SUNDA NUSWANTARA ARCHIVE', icon: '📖', cat: 'cat-human' },
     { url: '62. Menu Ether Tech.html', label: 'ETHER TECH & BLUEPRINTS', icon: '⚡', cat: 'cat-tech' },
     { url: 'cermin youtube.html', label: 'YOUTUBE MIRROR', icon: '📺', cat: 'cat-doc' },
+    { url: 'search void youtube.html', label: 'SEARCH VOID YOUTUBE', icon: '📺', cat: 'cat-doc' },
     { url: 'cermin multi platform.html', label: 'RANDOM ALGORITMA MEDIA', icon: '📺', cat: 'cat-doc' },
     { url: 'kompas.html', label: 'NAVIGASI TAKTIS', icon: '🧭', cat: 'cat-tools' },
     { url: 'petajalur.html', label: 'BUAT PETA JALUR', icon: '🌍', cat: 'cat-tools' },
@@ -520,6 +521,7 @@
     </script>
 </body>
 </html>
+
 
 
 
