--- a/explorer.html
+++ b/explorer.html
@@ -343,6 +343,7 @@
     { url: '20. Restorasi Sosial.html', label: 'Balai Warga', icon: '🤝', cat: 'cat-human' },
     { url: '21. Pustaka Peradaban.html', label: 'Leveling Diri', icon: '⏫', cat: 'cat-human' },
     { url: '23. Scanner Nilai Dasar.html', label: 'Analisa Dasar', icon: '🔍', cat: 'cat-edu' },
+    { url: 'QR Reader.html', label: 'QR Safety Reader Test', icon: '🔍', cat: 'cat-edu' },
     { url: '24. Estafet Kemanusiaan.html', label: 'Codex Manusia', icon: '👤', cat: 'cat-human' },
     { url: '25. Menu Ekonomi.html', label: 'Ekonomi Nilai', icon: '💰', cat: 'cat-fin' },
     { url: '26. Menu Masa Depan.html', label: 'Realitas & Masa Depan', icon: '💊', cat: 'cat-fin' },
@@ -351,6 +352,7 @@
     { url: '29. Pustaka Ajaran Tauhid.html', label: 'Pustaka Ajaran Tauhid', icon: '📄', cat: 'cat-culture' },
     { url: '30. Quantum Vitality.html', label: 'Quantum Vitality', icon: '⚛️', cat: 'cat-human' },
     { url: '31. Holistic Calibration.html', label: 'Holistic Radar', icon: '📡', cat: 'cat-human' },
+    { url: 'Matrik Iman Masing-Masing Agama.html', label: 'Matrik Iman Ukuran Agama', icon: '📡', cat: 'cat-human' },
     { url: '32. Legacy Hub.html', label: 'Warisan Generasi', icon: '🌳', cat: 'cat-human' },
     { url: '33. Civilization Hub.html', label: 'Civilization Hub', icon: '🌍', cat: 'cat-human' },
     { url: '34.Nusantara Auto-Anchor (POS Mode).html', label: 'Auto-Anchor POS', icon: '⚓', cat: 'cat-fin' },
@@ -521,6 +523,7 @@
     </script>
 </body>
 </html>
+
 
 
 
