Update panduan semesta sunda nuswantara.html

--- a/panduan semesta sunda nuswantara.html
+++ b/panduan semesta sunda nuswantara.html
@@ -441,6 +441,28 @@
         <a href="50 Protokol Anti Perang, Tapi Siap Lawan dan Perangi Elit Global.html" class="access-btn" style="border-color: #ff3333; color: #ff3333;">BUKA DATA</a>
     </div>
 
+     <div class="menu-card" style="border-color: #ff3333;" onclick="window.location.href='50 Paham Kedaulatan Bangsa vs Budak Dajjal.html'">
+        <div>
+            <span class="card-icon" style="color: #ff3333;">🏴‍☠️</span>
+            <div class="card-title" style="color: #ff3333;">KEDAULATAN BANGSA VS BUDAK DAJJAL</div>
+            <div class="card-desc">
+                Bongkar kedaulatan bangsa dengan system dajjal, dimana negara di jadikan pengendali dan rakyat jadi sandera nya, waktunya kembalikan hakikat berbangsa dan bernegara.
+            </div>
+        </div>
+        <a href="50 Protokol Anti Perang, Tapi Siap Lawan dan Perangi Elit Global.html" class="access-btn" style="border-color: #ff3333; color: #ff3333;">BUKA DATA</a>
+    </div>
+
+     <div class="menu-card" style="border-color: #ff3333;" onclick="window.location.href='50 Paham Kebangsaan dan Kenegaraan.html'">
+        <div>
+            <span class="card-icon" style="color: #ff3333;">🏴‍☠️</span>
+            <div class="card-title" style="color: #ff3333;">PEMAHAMAN BEDA KEBANGSAAN DAN KENEGARAAN</div>
+            <div class="card-desc">
+                Bongkar kebangsaan dan pemahaman tentang apakah Negara Milik Rakyat atau Rakyat Milik Negara?.
+            </div>
+        </div>
+        <a href="50 Protokol Anti Perang, Tapi Siap Lawan dan Perangi Elit Global.html" class="access-btn" style="border-color: #ff3333; color: #ff3333;">BUKA DATA</a>
+    </div>
+
 </div>
 
 <div class="footer">
@@ -450,6 +472,7 @@
 
 </body>
 </html>
+
 
 
 
