Update panduan semesta sunda nuswantara.html

--- a/panduan semesta sunda nuswantara.html
+++ b/panduan semesta sunda nuswantara.html
@@ -464,6 +464,86 @@
     </div>
 
 </div>
+    <div class="section-divider">
+    <span>PROTOKOL 50: TATANAN SOSIAL ALAMI</span>
+</div>
+
+<div class="dashboard-grid">
+
+    <div class="menu-card card-red" onclick="window.location.href='50 Bongkar Ilusi vs Realita.html'">
+        <span class="card-icon">💊</span>
+        <div class="card-title">THE MATRIX DECODER</div>
+        <div class="card-desc">
+            50 Bongkaran Ilusi vs Realita. Mengembalikan fungsi uang riil dan mematikan sistem derivatif/halu.
+        </div>
+        <button class="access-btn">EKSEKUSI FILE</button>
+    </div>
+
+    <div class="menu-card card-gold" onclick="window.location.href='50 Tips Bangun Tatanan Sosial Alami.html'">
+        <span class="card-icon">🛖</span>
+        <div class="card-title">TATANAN ORGANIK</div>
+        <div class="card-desc">
+            50 Cara Membangun Tatanan Sosial Alami. Memutuskan ketergantungan hukum kertas dengan Integritas Iman.
+        </div>
+        <button class="access-btn">EKSEKUSI FILE</button>
+    </div>
+
+    <div class="menu-card card-red" onclick="window.location.href='50 Tips Lawan Sekenario Dajjal di Perang Dunia ketiga.html'">
+        <span class="card-icon">🛡️</span>
+        <div class="card-title">GEOPOLITIK AWAKENING</div>
+        <div class="card-desc">
+            50 Bongkaran Skenario Perang Dunia ke-3. Cegah pasukan Nusantara jadi tumbal perang elit global.
+        </div>
+        <button class="access-btn">EKSEKUSI FILE</button>
+    </div>
+
+    <div class="menu-card card-green" onclick="window.location.href='50 Jenis Herbal Apotek Alam Nuswantara.html'">
+        <span class="card-icon">🌿</span>
+        <div class="card-title">APOTEK ALAM</div>
+        <div class="card-desc">
+            50 Tanaman Herbal Sakti Nusantara. Fungsi, olahan, dan cara budidaya untuk melawan dominasi farmasi.
+        </div>
+        <button class="access-btn">EKSEKUSI FILE</button>
+    </div>
+
+    <div class="menu-card" onclick="window.location.href='50 Tips Ketahanan dan Pertahanan Komunal.html'">
+        <span class="card-icon" style="color:#ffaa00;">🎒</span>
+        <div class="card-title">PROTOKOL EXODUS</div>
+        <div class="card-desc">
+            50 Persiapan Logistik "Mudik Terakhir" pindah ke desa. Alat manual, konsep Grey Man, dan sandang tempur.
+        </div>
+        <button class="access-btn">EKSEKUSI FILE</button>
+    </div>
+
+    
+    <div class="menu-card" onclick="window.location.href='50 Protokol Eksodus bila ingin pindah ke Desa.html'">
+        <span class="card-icon" style="color:#ffaa00;">🎒</span>
+        <div class="card-title">TIPS KETAHANAN DAN PERTAHANAN KOMUNAL</div>
+        <div class="card-desc">
+            50 Tips Persiapan Logistik dan Mindset sebelum Pindah Ke Pedesaan untuk Tujuan Ketahanan dan Kemandirian.
+        </div>
+        <button class="access-btn">EKSEKUSI FILE</button>
+    </div>
+
+    <div class="menu-card card-green" onclick="window.location.href='50 Tips Algaria dan Skill Survival desa.html'">
+        <span class="card-icon">🌾</span>
+        <div class="card-title">AGRARIA ALKEMIA</div>
+        <div class="card-desc">
+            50 Tips Bertani Tanpa Kimia. Teknologi resonansi, detoksifikasi tanah, dan skill alam untuk orang kota.
+        </div>
+        <button class="access-btn">EKSEKUSI FILE</button>
+    </div>
+
+    <div class="menu-card card-gold" onclick="window.location.href='50 Profesi Anti Nganggur di Pedesaan.html'">
+        <span class="card-icon">💰</span>
+        <div class="card-title">VILLAGE ECONOMY</div>
+        <div class="card-desc">
+            50 Profesi (Pacabakan) di desa pemutus perbudakan gaji. Passive income biologi (Ternak & Kebun).
+        </div>
+        <button class="access-btn">EKSEKUSI FILE</button>
+    </div>
+
+</div>
 
 <div class="footer">
     PROJECT QORIN DEVELOPER BUILD v.2026 <br>
@@ -472,6 +552,7 @@
 
 </body>
 </html>
+
 
 
 
