Update panduan semesta sunda nuswantara.html

--- a/panduan semesta sunda nuswantara.html
+++ b/panduan semesta sunda nuswantara.html
@@ -543,6 +543,47 @@
         <button class="access-btn">EKSEKUSI FILE</button>
     </div>
 
+    <div class="section-divider">
+    <span>PROTOKOL KEDAULATAN: MENTAL, ENERGI & HAK MUTLAK</span>
+</div>
+
+<div class="dashboard-grid">
+    <div class="menu-card card-purple" onclick="window.location.href='50 Makanan Pemutus Ilham Ilahi atau Semesta.html'">
+        <span class="card-icon">👁️</span>
+        <div class="card-title">SPIRITUAL NUTRITION</div>
+        <div class="card-desc">50 Makanan Pemutus Sinyal Ilahi. Bongkar racun Pineal (Fluoride, MSG, Daging Haram) yang membutakan nurani.</div>
+        <button class="access-btn">EKSEKUSI FILE</button>
+    </div>
+
+    <div class="menu-card card-gold" onclick="window.location.href='50 Protokol Kejernihan Pikiran.html'">
+        <span class="card-icon">🧠</span>
+        <div class="card-title">MENTAL CLARITY</div>
+        <div class="card-desc">50 Praktik Kejernihan Pikiran. Mengaktifkan firasat logis dan ketenangan batin penangkal adu domba.</div>
+        <button class="access-btn">EKSEKUSI FILE</button>
+    </div>
+
+    <div class="menu-card card-orange" onclick="window.location.href='50 Tips Energy Alternatif.html'">
+        <span class="card-icon">⚙️</span>
+        <div class="card-title">ENERGY REBELLION</div>
+        <div class="card-desc">50 Transisi Energi Mandiri. Dari daur ulang plastik jadi BBM, Biogas, hingga gerbang teknologi Ether.</div>
+        <button class="access-btn">EKSEKUSI FILE</button>
+    </div>
+
+    <div class="menu-card card-red" onclick="window.location.href='50 tawaran ilusi dajjal vs hak multlak manusia merdeka.html'">
+        <span class="card-icon">🎭</span>
+        <div class="card-title">THE SOVEREIGN TRAP</div>
+        <div class="card-desc">50 Tawaran Ilusi Dajjal (Suap, Woke, Utang) VS Hak Mutlak Manusia Merdeka. Jangan kagocek ilusi!</div>
+        <button class="access-btn">EKSEKUSI FILE</button>
+    </div>
+
+    <div class="menu-card card-green" onclick="window.location.href='50 Tips Rebut Negara dari Elit Global.html'">
+        <span class="card-icon">✊</span>
+        <div class="card-title">RECLAIM THE STATE</div>
+        <div class="card-desc">50 Cara Rakyat Merebut Hak. Bongkar kebijakan pro-elit global dan aksi antisipasi nyata dari bawah.</div>
+        <button class="access-btn">EKSEKUSI FILE</button>
+    </div>
+</div>
+
 </div>
 
 <div class="footer">
@@ -552,6 +593,7 @@
 
 </body>
 </html>
+
 
 
 
