--- a/explorer.html
+++ b/explorer.html
@@ -319,6 +319,12 @@
     { url: 'bahan bangun leuit piramida.html', label: 'Bahan Bangun Leuit Piramida', icon: '📝', cat: 'cat-blue' },
     { url: 'leuit piramida.html', label: 'Leuit Piramida', icon: '📝', cat: 'cat-blue' },
     { url: 'kebutuhan ektraksi mineral tanah jarang.html', label: 'Kebutuhan Ektraksi Mineral Tanah Jarang', icon: '📝', cat: 'cat-blue' },
+    { url: '50 Jenis Ransum Alami Nuswantara.html', label: '50 Jenis Ransum Alami Nuswantara', icon: '📝', cat: 'cat-blue' },
+    { url: '50 Jenis Alat Produksi Kerakyatan.html', label: '50 Jenis Alat Produksi Kerakyatan', icon: '📝', cat: 'cat-blue' },
+    { url: '50 Tips Kerangka Peran Sosial.html', label: '50 Tips Kerangka Peran Sosial.html', icon: '📝', cat: 'cat-blue' },
+    { url: '50 Pengetahuan Tambang rakyat Ramah Lingkungan.html', label: '50 Pengetahuan Tambang rakyat Ramah Lingkungan', icon: '📝', cat: 'cat-blue' },
+    { url: '50 Jenis Pajak Profesi di Era System Stability Settlement.html', label: '50 Jenis Pajak Profesi di Era System Stability Settlement', icon: '📝', cat: 'cat-blue' },
+    { url: '50 Jenis Wagunan Komunal Kerajaan.html', label: '50 Jenis Wagunan Komunal Kerajaan', icon: '📝', cat: 'cat-blue' },
     { url: '01 Jam Sunda Nuswantara.html', label: 'Jam Utama', icon: '🕐', cat: 'cat-time' },
     { url: '02. Kalender Sunda Nuswantara.html', label: 'Kalender', icon: '📅', cat: 'cat-time' },
     { url: '03. Jadwal Shalat Sunda Nuswantara.html', label: 'Shalat', icon: '🕌', cat: 'cat-culture' },
@@ -523,6 +529,7 @@
     </script>
 </body>
 </html>
+
 
 
 
