--- a/index.html
+++ b/index.html
@@ -678,6 +678,10 @@
                     <a href="#" onclick="launchApp('browsing.html', 'browsing.html', '🔍')" class="app-card cat-future">
                     <div class="app-icon">🔍</div><div class="app-label">Browsing Tanpa Algoritma</div>
                 </a>
+                    <a href="#" onclick="launchApp('index.html', 'Wiki Sundaland Nuswantara.html', '🏛️')" class="app-card cat-doc">
+                    <div class="app-icon">🏛️</div>
+                      <div class="app-label">WIKI NUSWANTARA OS (Arsip Sajarah Murni)</div>
+                </a>
                     
             </div>
 
@@ -1060,6 +1064,7 @@
     </script>
 </body>
 </html>
+
 
 
 
