--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
                     <a href="#" onclick="launchApp('browsing.html', 'browsing.html', '🔍')" class="app-card cat-future">
                     <div class="app-icon">🔍</div><div class="app-label">Browsing Tanpa Algoritma</div>
                 </a>
-                    <a href="#" onclick="launchApp('index.html', 'Wiki Sundaland Nuswantara.html', '🏛️')" class="app-card cat-doc">
+                    <a href="#" onclick="launchApp('Wiki Sundaland Nuswantara.html', 'Wiki Sundaland Nuswantara.html', '🏛️')" class="app-card cat-doc">
                     <div class="app-icon">🏛️</div>
                       <div class="app-label">WIKI NUSWANTARA OS (Arsip Sajarah Murni)</div>
                 </a>
@@ -1064,6 +1064,7 @@
     </script>
 </body>
 </html>
+
 
 
 
